# app-near

./: .gitignore  Cargo.toml  Dockerfile  README.md
near_token/src/: lib.rs
src/: main.rs  swap.rs
src/app_ui/: address.rs  logo.rs
src/app_ui/sign/common/action/: function_call_common.rs  mod.rs  stake.rs  stake_fn_call.rs
src/handlers/: sign_tx.rs
src/handlers/common/action/: function_call.rs  mod.rs
src/parsing/transaction_stream_reader/: mod.rs
src/parsing/types/common/: tx_public_key.rs
tests/: requirements.txt  setup.cfg
tests/application_client/: client.py
tests/test_public_key_validation/: test_sign_transaction.py
tests/test_sign_transaction/: test_function_call_stake.py  test_stake.py
workdir/app-near/: Makefile
workdir/app-near/fuzz/: build.sh  run.sh
workdir/app-near/src/: canary.c  canary.h  constants.h  context.h  get_public_key.c  get_public_key.h  main.c  main.h  os_shim.h  parse_transaction.c  sign_transaction.c  sign_transaction.h  utils.c  utils.h
workdir/app-near/src/crypto/: ledger_crypto.c  ledger_crypto.h  near.c  near.h
workdir/app-near/test/: CMakeLists.txt  README.md  fuzz_tx.c  main  main.c
workdir/app-near/test/testcases/: add_limited_key_transaction.raw  add_unlimited_key_transaction.raw  create_account_transaction.raw  delete_account_transaction.raw  delete_key_transaction.raw  deploy_contract_transaction.raw  function_call_transaction.raw  multiple_actions_transaction.raw  stake_transaction.raw  transfer_1_transaction.raw  transfer_2_transaction.raw  transfer_3_transaction.raw
